# kratos_dev

./: .gitignore  GENESIS_CONSTITUTION.md  KratOs_first-vision.txt  KratOs_vision-initiale.txt  LICENSE  OVERVIEW.md  README.md  RUNTIME_USAGE_GUIDE.md  SECURITY_AUDIT_REPORT.md
docs/spec/: README.md  SPEC_1_TOKENOMICS.md  SPEC_3_CONSENSUS.md  SPEC_4_SIDECHAINS.md  SPEC_6_NETWORK_SECURITY.md  SPEC_7_CONTRIBUTOR_ROLES.md
docs/synthese/: BLOCKCHAIN_DATA_MODEL.md  KRATOS_SYNTHESIS.md  NODE_IMPLEMENTATION.md  RPC_API_REFERENCE.md  TOKENOMICS.md
kotlin_client/: build.gradle.kts  gradlew  gradlew.bat
kotlin_client/src/main/kotlin/com/kratos/client/: Main.kt
rust/kratos-core/: Cargo.toml  validator.json
rust/kratos-core/.cargo/: config.toml
rust/kratos-core/src/: main.rs
rust/kratos-core/src/cli/: config.rs  mod.rs  runner.rs
rust/kratos-core/src/consensus/: clock_health.rs  economics.rs  epoch.rs  metrics.rs  mod.rs  pos.rs  slashing.rs  validation.rs  validator.rs  validator_credits.rs  vc_decay.rs  vrf_selection.rs
rust/kratos-core/src/consensus/finality/: gadget.rs  mod.rs  rounds.rs  types.rs  votes.rs
rust/kratos-core/src/contracts/: arbitration.rs  emergency.rs  fork.rs  governance.rs  identity.rs  krat.rs  messaging.rs  meta_governance.rs  mod.rs  personhood.rs  reputation.rs  security.rs  sidechains.rs  staking.rs
rust/kratos-core/src/execution/: gas.rs  mod.rs
rust/kratos-core/src/genesis/: config.rs  mod.rs  spec.rs
rust/kratos-core/src/network/: behaviour.rs  dns_seed_client.rs  dns_seeds.rs  mod.rs  peer.rs  protocol.rs  rate_limit.rs  request.rs  service.rs  sync.rs  warp_sync.rs
rust/kratos-core/src/node/: finality_integration.rs  mempool.rs  mod.rs  producer.rs  service.rs
rust/kratos-core/src/rpc/: methods.rs  mod.rs  rate_limit.rs  server.rs  types.rs
rust/kratos-core/src/storage/: db.rs  mod.rs  state.rs
rust/kratos-core/src/tests/: adversary_invariants.rs  bootstrap_exit.rs  bootstrap_exit_mainnet.rs  emergency_invariants.rs  fork_invariants.rs  integration.rs  mod.rs  networking.rs  security_invariants.rs
rust/kratos-core/src/types/: account.rs  block.rs  chain.rs  contributor.rs  dispute.rs  emergency.rs  fork.rs  fraud.rs  identity.rs  merkle.rs  mod.rs  personhood.rs  primitives.rs  protocol.rs  reputation.rs  security.rs  signature.rs  transaction.rs
rust/kratos-dns-seed/: Cargo.toml
rust/kratos-dns-seed/src/: config.rs  crypto.rs  main.rs  network_state.rs  types.rs
rust/kratos-dns-seed/src/api/: metrics.rs  mod.rs  routes.rs
rust/kratos-dns-seed/src/distribution/: generator.rs  mod.rs  server.rs
rust/kratos-dns-seed/src/dns/: handler.rs  mod.rs  server.rs
rust/kratos-dns-seed/src/heartbeat/: mod.rs  protocol.rs  rate_limiter.rs
rust/kratos-dns-seed/src/registry/: mod.rs  scoring.rs  storage.rs
rust/kratos-wallet/: Cargo.toml
rust/kratos-wallet/src/: crypto.rs  main.rs  rpc.rs  storage.rs  types.rs  ui.rs
simulations/: kratos_monte_carlo.py  simulation_results.json
spec/: SPEC_1_TOKENOMICS.md  SPEC_2_VALIDATOR_CREDITS.md  SPEC_3_CONSENSUS.md  SPEC_5_GOVERNANCE.md  SPEC_6_NETWORK_SECURITY.md  SPEC_7_CONTRIBUTOR_ROLES.md  SPEC_8_WALLET.md
synthese/: BLOCKCHAIN_DATA_MODEL.md  GENESIS_TESTING.md  KRATOS_SYNTHESIS.md  NODE_IMPLEMENTATION.md  README.md  RPC_API_REFERENCE.md  TOKENOMICS.md  WALLET_SYNTHESIS.md
