[package]
name = "kratos-core"
version = "0.1.0"
edition = "2021"
authors = ["KratOs Contributors"]
description = "KratOs - A minimal, auditable blockchain protocol for coexistence"
license = "MIT OR Apache-2.0"

[dependencies]
# Cryptography
blake3 = "1.5"
ed25519-dalek = { version = "2.1", features = ["rand_core"] }
schnorrkel = "0.11"
merlin = "3.0"
rand = "0.8"
rs_merkle = "1.4"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"

# Storage
rocksdb = "0.22"

# Async runtime
tokio = { version = "1", features = ["full"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Time
chrono = "0.4"

# Utilities
thiserror = "1.0"
anyhow = "1.0"
hex = "0.4"

# CLI
clap = { version = "4.4", features = ["derive", "env"] }
dirs = "5.0"

# Networking (P2P)
libp2p = { version = "0.53", features = ["tcp", "noise", "yamux", "gossipsub", "kad", "tokio", "macros", "request-response"] }
futures = "0.3"

# RPC
warp = "0.3"

[features]
default = []
networking = []

[dev-dependencies]
proptest = "1.4"
tempfile = "3.8"

[[bin]]
name = "kratos-node"
path = "src/main.rs"
