[package]
name = "kratos-dns-seed"
version = "0.1.0"
edition = "2021"
authors = ["KratOs Contributors"]
description = "Independent DNS Seed service for KratOs network peer discovery"
license = "MIT"
repository = "https://github.com/VzKtS/kratos_dev"

[dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full", "sync", "time", "net", "io-util", "macros", "rt-multi-thread", "signal"] }

# Cryptography (same as kratos-core for compatibility)
ed25519-dalek = { version = "2.1", features = ["serde", "rand_core"] }
rand = "0.8"
blake3 = "1.5"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"
serde_bytes = "0.11"
serde_with = { version = "3.9", features = ["base64"] }

# Storage
rocksdb = "0.22"

# Networking (we use a custom simple DNS server, not trust-dns)
# trust-dns-server = "0.23"
# trust-dns-proto = "0.23"

# HTTP API
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# CLI
clap = { version = "4.4", features = ["derive"] }

# Time
chrono = { version = "0.4", features = ["serde"] }

# Utils
thiserror = "1.0"
anyhow = "1.0"
hex = "0.4"
base64 = "0.21"
toml = "0.8"
async-trait = "0.1"

# IP geolocation (optional, for region detection)
# maxminddb = "0.24"

[dev-dependencies]
tempfile = "3.9"

[[bin]]
name = "kratos-dns-seed"
path = "src/main.rs"
